<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="276dp"
        android:layout_height="107dp"
        android:layout_margin="1dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">


            <Button
                android:id="@+id/calcular"
                style="@style/btnStyles"
                android:layout_width="127dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_weight="0"
                android:drawableLeft="@drawable/icono_cal"
                android:marqueeRepeatLimit="marquee_forever"
                android:text="@string/btn1"
                android:textStyle="bold"
                android:visibility="visible" />

            <Button
                android:id="@+id/btnjuego"
                style="@style/btnStyles"
                android:layout_width="127dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:drawableEnd="@drawable/game_icon"
                android:text="@string/btn2"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btndesplazar"
                style="@style/btnStyles"
                android:layout_width="127dp"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/picture_icon"
                android:scrollbarAlwaysDrawHorizontalTrack="false"
                android:scrollbarAlwaysDrawVerticalTrack="false"
                android:text="@string/btn3"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btnselecionar"
                style="@style/btnStyles"
                android:layout_width="127dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:drawableEnd="@drawable/picture_icon"
                android:text="@string/btn4"
                android:textSize="12sp" />
        </TableRow>

    </TableLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="325dp"
        android:layout_height="426dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/foto"
        android:contentDescription="TODO" />

</androidx.constraintlayout.widget.ConstraintLayout>