<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/CustomTheme">

    <RelativeLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/calcular"
            android:layout_alignStart="@+id/tv1"
            android:layout_alignLeft="@+id/tv1"
            android:layout_marginTop="55dp"
            android:text="@string/resultado"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="71dp"
            android:layout_marginLeft="71dp"
            android:layout_marginTop="37dp"
            android:text="@string/numeroPrimo"
            android:textSize="24sp" />

        <Button
            android:id="@+id/calcular"
            style="@style/btnStyles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et1"
            android:layout_alignStart="@+id/et1"
            android:layout_alignLeft="@+id/et1"
            android:layout_marginTop="51dp"
            android:onClick="btnprimo"
            android:text="@string/calcular" />

        <EditText
            android:id="@+id/et1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:ems="10"
            android:inputType="number" />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
